# python-project-52

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml  pytest.ini  ruff.toml
apps/statuses/: forms.py  models.py  tests.py  urls.py  views.py
apps/statuses/fixtures/: statuses.json
apps/statuses/templates/statuses/: create.html  delete.html  index.html  update.html
apps/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
apps/users/fixtures/: users.json
apps/users/migrations/: 0001_initial.py
apps/users/templates/users/: create.html  index.html  (+2 more)
locale/ru/LC_MESSAGES/: django.po
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  users.json
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/fixtures/: labels.json  statuses.json  tasks.json  users.json
task_manager/tasks/migrations/: 0001_initial.py  0002_task_labels.py
task_manager/templates/: base.html  index.html
task_manager/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0002_alter_customuser_first_name_and_more.py
templates/: base.html  flash_messages.html  header.html  index.html  login.html  pagination.html  set_lang.html
(+17 files in other folders)
