[project]
name = "python-project-52"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.1.0",
    "django>=6.0.1",
    "django-bootstrap5>=26.1",
    "django-filter>=25.2",
    "gunicorn>=24.1.1",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.1",
    "rollbar>=1.3.0",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "pytest-django>=4.11.1",
    "ruff>=0.14.14",
]
